slowly getting to create the whole structure

--- a/Hotel_System/Hotel_System/Hotel_System.vcxproj
+++ b/Hotel_System/Hotel_System/Hotel_System.vcxproj
@@ -133,18 +133,22 @@
     <ClCompile Include="MyString.cpp" />
     <ClCompile Include="PricingStrategy.cpp" />
     <ClCompile Include="Room.cpp" />
+    <ClCompile Include="User.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Accountant.h" />
     <ClInclude Include="Apartment.h" />
     <ClInclude Include="ConferenceRoom.h" />
     <ClInclude Include="DoubleRoom.h" />
     <ClInclude Include="Guest.h" />
     <ClInclude Include="HelperFunctions.h" />
     <ClInclude Include="LuxuryRoom.h" />
+    <ClInclude Include="Manager.h" />
     <ClInclude Include="MyString.h" />
     <ClInclude Include="MyVector.hpp" />
     <ClInclude Include="Period.h" />
     <ClInclude Include="PricingStrategy.h" />
+    <ClInclude Include="Receptionist.h" />
     <ClInclude Include="Reservation.h" />
     <ClInclude Include="Room.h" />
     <ClInclude Include="SingleRoom.h" />
