--- a/Hotel_System/Hotel_System/Hotel_System.vcxproj
+++ b/Hotel_System/Hotel_System/Hotel_System.vcxproj
@@ -139,6 +139,7 @@
     <ClCompile Include="Period.cpp" />
     <ClCompile Include="PricingStrategy.cpp" />
     <ClCompile Include="Room.cpp" />
+    <ClCompile Include="RoomFactory.cpp" />
     <ClCompile Include="SingleRoom.cpp" />
     <ClCompile Include="User.cpp" />
   </ItemGroup>
@@ -160,6 +161,7 @@
     <ClInclude Include="Receptionist.h" />
     <ClInclude Include="Reservation.h" />
     <ClInclude Include="Room.h" />
+    <ClInclude Include="RoomFactory.h" />
     <ClInclude Include="SingleRoom.h" />
     <ClInclude Include="System.h" />
     <ClInclude Include="User.h" />
