--- a/Hotel_System/Hotel_System/Hotel_System.vcxproj.filters
+++ b/Hotel_System/Hotel_System/Hotel_System.vcxproj.filters
@@ -60,6 +60,12 @@
     <ClCompile Include="RoomFactory.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Reservation.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ReservationManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="PricingStrategy.h">
@@ -123,6 +129,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="RoomFactory.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ReservationManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
