Working with users...

--- a/Hotel_System/Hotel_System/Hotel_System.vcxproj
+++ b/Hotel_System/Hotel_System/Hotel_System.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Accountant.cpp" />
     <ClCompile Include="Apartment.cpp" />
     <ClCompile Include="Commands.cpp" />
     <ClCompile Include="ConferenceRoom.cpp" />
@@ -135,18 +136,22 @@
     <ClCompile Include="HelperFunctions.cpp" />
     <ClCompile Include="LuxuryRoom.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Manager.cpp" />
     <ClCompile Include="MyString.cpp" />
     <ClCompile Include="Period.cpp" />
     <ClCompile Include="PricingStrategy.cpp" />
+    <ClCompile Include="Receptionist.cpp" />
     <ClCompile Include="Reservation.cpp" />
     <ClCompile Include="ReservationManager.cpp" />
     <ClCompile Include="Room.cpp" />
     <ClCompile Include="RoomFactory.cpp" />
     <ClCompile Include="SingleRoom.cpp" />
     <ClCompile Include="User.cpp" />
+    <ClCompile Include="UserManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Accountant.h" />
+    <ClInclude Include="ActionLog.h" />
     <ClInclude Include="Apartment.h" />
     <ClInclude Include="Commands.h" />
     <ClInclude Include="ConferenceRoom.h" />
@@ -168,6 +173,7 @@
     <ClInclude Include="SingleRoom.h" />
     <ClInclude Include="System.h" />
     <ClInclude Include="User.h" />
+    <ClInclude Include="UserManager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
