--- a/Hotel_System/Hotel_System/Hotel_System.vcxproj.filters
+++ b/Hotel_System/Hotel_System/Hotel_System.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClCompile Include="Receptionist.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="IncomeManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="PricingStrategy.h">
