--- a/Hotel_System/Hotel_System/Hotel_System.vcxproj
+++ b/Hotel_System/Hotel_System/Hotel_System.vcxproj
@@ -133,6 +133,7 @@
     <ClCompile Include="ConferenceRoom.cpp" />
     <ClCompile Include="DoubleRoom.cpp" />
     <ClCompile Include="Guest.cpp" />
+    <ClCompile Include="GuestManager.cpp" />
     <ClCompile Include="IncomeManager.cpp" />
     <ClCompile Include="LuxuryRoom.cpp" />
     <ClCompile Include="main.cpp" />
@@ -145,7 +146,9 @@
     <ClCompile Include="ReservationManager.cpp" />
     <ClCompile Include="Room.cpp" />
     <ClCompile Include="RoomFactory.cpp" />
+    <ClCompile Include="RoomManager.cpp" />
     <ClCompile Include="SingleRoom.cpp" />
+    <ClCompile Include="System.cpp" />
     <ClCompile Include="User.cpp" />
     <ClCompile Include="UserManager.cpp" />
   </ItemGroup>
@@ -158,6 +161,7 @@
     <ClInclude Include="Constants.h" />
     <ClInclude Include="DoubleRoom.h" />
     <ClInclude Include="Guest.h" />
+    <ClInclude Include="GuestManager.h" />
     <ClInclude Include="IncomeManager.h" />
     <ClInclude Include="LuxuryRoom.h" />
     <ClInclude Include="Manager.h" />
@@ -170,6 +174,7 @@
     <ClInclude Include="ReservationManager.h" />
     <ClInclude Include="Room.h" />
     <ClInclude Include="RoomFactory.h" />
+    <ClInclude Include="RoomManager.h" />
     <ClInclude Include="SingleRoom.h" />
     <ClInclude Include="System.h" />
     <ClInclude Include="User.h" />
