--- a/Hotel_System/Hotel_System/Hotel_System.vcxproj.filters
+++ b/Hotel_System/Hotel_System/Hotel_System.vcxproj.filters
@@ -87,6 +87,9 @@
     <ClCompile Include="System.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="PricingStrategyFactory.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="PricingStrategy.h">
@@ -165,6 +168,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="RoomManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="PricingStrategyFactory.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
